# Brain-harness

./: .env.example  .gitignore  LICENSE  README.md  README_ENVELOPE_SOURCE_DOC_PACK.md  README_SOURCE_DOC_PACK.md  SOURCE_01_MISSION_RUNTIME_AND_PLANES.md  SOURCE_02_GOVERNANCE_TAGS_AND_RETRIEVAL.md  SOURCE_03_DATA_CONTRACTS_AND_MIGRATION.md  SOURCE_04_BUILD_ORDER_AND_AGENT_SPLIT.md  SOURCE_AGENT_AND_MAILBOX_ROUTING.md  SOURCE_DELIVERY_RECEIPT_AND_ACK_CONTRACT.md  SOURCE_DOC_ARTIFACT_AND_TASK_RELATIONSHIPS.md  SOURCE_ENVELOPE_SOURCE_INDEX.md  SOURCE_EVENT_APPEND_LOG_AND_REPLAY_RULES.md  SOURCE_EVENT_ENVELOPE_CONTRACT.md  SOURCE_EVENT_IDENTITY_AND_TIMELINE.md  SOURCE_MESSAGE_LIFECYCLE_AND_STATE_MACHINE.md  SOURCE_PROMOTION_AND_CANONICALIZATION_FLOW.md  SOURCE_TAG_GOVERNANCE_AND_ALIAS_LAW.md  SOURCE_UUIDV7_USAGE_RULES.md  pyproject.toml
contracts/: identity_contract.yaml  ingest_contract.yaml  plane_contract.yaml  provenance_contract.yaml  retrieval_contract.yaml  tag_contract.yaml
plugins/: __init__.py
prompts/: PROJECT_ORIENTATION_AND_EXECUTION_PROMPT.txt
registries/: doc_type_rules.yaml  tag_registry.comms.yaml  tag_registry.yaml
schemas/: acknowledgement.schema.json  comms_identity.schema.json  delivery_receipt.schema.json  envelope.schema.json  notifier_event.schema.json
scripts/: audit_planes.py  audit_runtime.py  build_tag_registry.py  collect_agent_state.py  emit_violation.py  migrate_canonical_chunks_v2.py  validate_identity.py  validate_provenance.py  validate_qmd.py  validate_tags.py
tests/: conftest.py  test_doc_id_normalization.py  test_event_ids.py  (+6 more)
(+82 files in other folders)
